2006-10-24  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py (a11y_test_init): Add a third argument to
	specify whether or not to run the app, so that we can test apps which
	need to already be running, such as the panel or nautilus

	* scripts/Makefile.am: Update to include all the new scripts

	* scripts/gnome-panel.py: Add the beginnings of a script to test the
	gnome-panel accessibility

2006-09-28  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 2.15.1 for release

2006-09-28  Rodney Dawes  <dobey@novell.com>

	* scripts/Makefile.am: evolution.py replaces evolution-mail.py

2006-09-28  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Remove AM_MAINTAINER_MODE call
	Add AC_PATH_PROG for python so that we can byte-compile the module

	* python/Makefile.am: Add bits to byte-compile the python module and
	install the byte-compiled cache file

2006-09-21  Rodney Dawes  <dobey@novell.com>

	* README: Update with some content about how the scripts work

2006-09-21  Rodney Dawes  <dobey@novell.com>

	* scripts/evolution.py: New script to scan most of the Mail UI in the
	Evolution application

	* scripts/evolutin-mail.py: Remove this script in favor of evolution.py

2006-09-21  Rodney Dawes  <dobey@novell.com>

	* scripts/gnome-theme-manager.py: Fix the program name and window title
	so that the capplet will get scanned properly

2006-09-20  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestSuite.py (a11y_test_init): Ensure that the language
	we are running under is en_US.UTF-8 so that all the scripts will work

2006-09-20  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestSuite.py (a11y_test_init): Add support for passing
	in arguments to launch the application with

2006-09-20  Rodney Dawes  <dobey@novell.com>

	* scripts/zen-installer.py: Update to use the python module stuff for
	scanning the program for accessibility issues

2006-09-18  Rodney Dawes  <dobey@novell.com>
